# EEG-LTT

./: AUTHORS.rst  README.md  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/eeg_ltt/: __init__.py  ltt.py  synthetic_data_exp.py
tests/: conftest.py  test_ltt.py
